# CGFX5

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  Unix-Build.sh  Unix-BuildDebug.sh  Unix-Clean.sh  Unix-GenCodeBlocksProject.sh  Unix-GitPush.sh  Windows-Clean.bat  Windows-GenVisualStudioProject.bat  run
cmake/: FindASSIMP.cmake  FindGLEW.cmake  FindSDL2.cmake
res/shaders/: basicShader.glsl
res/textures/: bricks.dds
src/: main.cpp  tags  test.cpp  tests.hpp  timing.cpp  timing.hpp
src/core/: application.hpp  common.hpp  memory.cpp  memory.hpp  timing.hpp  window.hpp
src/dataStructures/: array.hpp  map.hpp  string.cpp  string.hpp
src/input/: iinput.h
src/math/: aabb.cpp  aabb.hpp  color.cpp  color.hpp  intersects.hpp  math.hpp  matrix.cpp  matrix.hpp  plane.cpp  plane.hpp  quaternion.cpp  quaternion.hpp  sphere.cpp  sphere.hpp  transform.cpp  transform.hpp  vecmath.cpp  vecmath.hpp  vector.cpp  vector.hpp
src/platform/: platform.hpp  platformApplication.hpp  platformMath.hpp  platformMemory.hpp  platformRenderDevice.hpp  platformSIMDInclude.hpp  platformTiming.hpp  platformVecmath.hpp  platformWindow.hpp
src/platform/generic/: cmwc4096.c  cmwc4096.h  genericMath.cpp  genericMath.hpp  genericMemory.cpp  genericMemory.hpp  genericVecmath.hpp
src/platform/opengl/: openGLRenderDevice.cpp  openGLRenderDevice.hpp
src/platform/sdl/: sdlApplication.cpp  sdlApplication.hpp  sdlWindow.cpp  sdlWindow.hpp  sdltiming.cpp  sdltiming.hpp
src/platform/sse/: sseVecmath.hpp
src/rendering/: arrayBitmap.cpp  arrayBitmap.hpp  ddstexture.cpp  ddstexture.hpp  indexedModel.cpp  indexedModel.hpp  material.hpp  modelLoader.cpp  modelLoader.hpp  renderContext.hpp  renderDevice.hpp  renderTarget.hpp  sampler.hpp  shader.hpp  texture.hpp  uniformBuffer.hpp  vertexArray.hpp
src/rendering/staticLibs/: stb_image.c
tests/: Makefile  minunit.h  runtests.sh  vecmath_tests.cpp
